@@ -9,6 +9,7 @@ git clone git://github.com/Islandora/tuque.git
 git clone -b $FEDORA_VERSION git://github.com/Islandora/islandora_tomcat.git
 cd islandora_tomcat
 export CATALINA_HOME='.'
+export JAVA_OPTS="-Xms1024m -Xmx1024m -XX:MaxPermSize=512m -XX:+CMSClassUnloadingEnabled -Djavax.net.ssl.trustStore=$CATALINA_HOME/fedora/server/truststore -Djavax.net.ssl.trustStorePassword=tomcat"
 ./bin/startup.sh
 cd $HOME
 pear upgrade --force Console_Getopt
@@ -18,7 +19,7 @@ pear channel-discover pear.drush.org
 pear channel-discover pear.drush.org
 pear channel-discover pear.phpqatools.org
 pear channel-discover pear.netpirates.net
-pear install pear/PHP_CodeSniffer
+pear install pear/PHP_CodeSniffer-1.4.8
 pear install pear.phpunit.de/phpcpd
 pear install drush/drush-5.9.0
 phpenv rehash
